--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -12,9 +12,9 @@
 	<artifactId>apipaises</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>apipaises</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Project developed by students of Distributed Applications class - 2021 2nd Cycle</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
