--- a/.github/workflows/main_spring-api-paises.yml
+++ b/.github/workflows/main_spring-api-paises.yml
@@ -22,13 +22,13 @@ jobs:
           java-version: '11'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn -f ${{ github.workspace }}/back-end clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/back-end/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
