--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=appdist_spa2021
 spring.datasource.password=@Aplicaciones@Distribuidas@SPA@2021
-spring.datasource.url=jdbc:postgresql://190.15.134.7:8080/erpcontableappweb
+spring.datasource.url=jdbc:postgresql://190.15.134.7:8080/APICountries2021
+spring.jpa.show-sql=true
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.poolName=ApiPaises2021_Pool_SpringBoot
+spring.datasource.hikari.maxLifetime=30000
+spring.datasource.hikari.connectionTimeout=30000
 
 spring.data.mongodb.username=appdist_spa
 spring.data.mongodb.password=@Aplicaciones@Distribuidas@spa@2021
 spring.data.mongodb.database=paises
-spring.data.mongodb.port=27017
+spring.data.mongodb.port=7070
 spring.data.mongodb.host=190.15.134.7
