Implemented province list endpoint Soap ws
The logic for the listing of the registries obtained from database was
implemented in the province xsd file and a dbResponse model was created inside the shared folder

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -94,6 +94,7 @@
 				<configuration>
 					<sources>
 						<source>${project.basedir}/src/main/resources/soapws-xsds/country.xsd</source>
+						<source>${project.basedir}/src/main/resources/soapws-xsds/province.xsd</source>
 					</sources>
 				</configuration>
 			</plugin>
