The user registry service was implemented and the province crud was completed
Please test the user registration endpoint, once Jeyson Jaramillo has made the changes.

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -95,6 +95,7 @@
 					<sources>
 						<source>${project.basedir}/src/main/resources/soapws-xsds/country.xsd</source>
 						<source>${project.basedir}/src/main/resources/soapws-xsds/province.xsd</source>
+						<source>${project.basedir}/src/main/resources/soapws-xsds/users.xsd</source>
 					</sources>
 				</configuration>
 			</plugin>
