Modelos, controladores y servicios

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -10,8 +10,11 @@ spring.datasource.hikari.poolName=ApiPaises2021_Pool_SpringBoot
 spring.datasource.hikari.maxLifetime=30000
 spring.datasource.hikari.connectionTimeout=30000
 
-spring.data.mongodb.username=appdist_spa
-spring.data.mongodb.password=@Aplicaciones@Distribuidas@spa@2021
-spring.data.mongodb.database=paises
-spring.data.mongodb.port=7070
-spring.data.mongodb.host=190.15.134.7
+spring.data.mongodb.uri=mongodb://appdist_spa:%40Aplicaciones%40Distribuidas%40spa%402021@190.15.134.7:7070/APICountries2021?ssl=false&authSource=admin&authMechanism=SCRAM-SHA-1
+
+
+#spring.data.mongodb.username=appdist_spa
+#spring.data.mongodb.password=@Aplicaciones@Distribuidas@spa@2021
+#spring.data.mongodb.database=paises
+#spring.data.mongodb.port=7070
+#spring.data.mongodb.host=190.15.134.7
