--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -84,7 +84,11 @@
 			<artifactId>json</artifactId>
 			<version>20201115</version>
 		</dependency>
-  
+		
+		<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>
 	</dependencies>
 
 	<build>
