--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -37,7 +37,9 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/app/components/listcountries/consumesoap.js",
+              "src/app/components/listcountries/jQuery.js"
             ]
           },
           "configurations": {
@@ -110,7 +112,10 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/app/components/listcountries/consumesoap.js",
+              "src/app/components/listcountries/jQuery.js"
+
             ]
           }
         }
