--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "~13.1.0",
     "@angular/cdk": "^13.1.1",
     "@angular/common": "~13.1.0",
@@ -22,9 +23,21 @@
     "@angular/router": "~13.1.0",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
+    "concat-stream": "^2.0.0",
+    "core-js": "^3.20.1",
+    "crypto-js": "^4.1.1",
+    "events": "^3.3.0",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "ngx": "^2.4.0",
     "rxjs": "~7.4.0",
+    "sax": "^1.2.4",
+    "soap": "^0.43.0",
+    "stream": "^0.0.2",
+    "strong-soap": "^3.3.1",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
