Soap WS module almost done
The city entity with it's functionalities and the login endpoint were implemented. Also some refactoring and import cleaning were made

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -96,6 +96,7 @@
 						<source>${project.basedir}/src/main/resources/soapws-xsds/country.xsd</source>
 						<source>${project.basedir}/src/main/resources/soapws-xsds/province.xsd</source>
 						<source>${project.basedir}/src/main/resources/soapws-xsds/users.xsd</source>
+						<source>${project.basedir}/src/main/resources/soapws-xsds/city.xsd</source>
 					</sources>
 				</configuration>
 			</plugin>
