--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,9 +4,9 @@
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.1.1.",
   "main": "karma.conf.js",
   "dependencies": {
-    "abbrev": "^1.1.1",
     "-": "^0.0.1",
     "abab": "^2.0.5",
+    "abbrev": "^1.1.1",
     "accept-language": "^3.0.18",
     "accepts": "^1.3.7",
     "acorn": "^8.6.0",
@@ -16,28 +16,30 @@
     "agentkeepalive": "^4.1.4",
     "aggregate-error": "^3.1.0",
     "ajv": "^8.8.2",
-    "ajv-keywords": "^5.1.0",
     "ajv-formats": "^2.1.1",
+    "ajv-keywords": "^5.1.0",
+    "angular-core": "^0.0.5",
+    "angular-material": "^1.2.4",
     "ansi-colors": "^4.1.1",
-    "ansi-html-community": "^0.0.8",
-    "ansi-styles": "^3.2.1",
-    "aproba": "^2.0.0",
-    "anymatch": "^3.1.2",
     "ansi-escapes": "^4.3.2",
+    "ansi-html-community": "^0.0.8",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^3.1.2",
+    "aproba": "^2.0.0",
     "are-we-there-yet": "^2.0.0",
     "argparse": "^1.0.10",
     "arr-diff": "^4.0.0",
     "arr-flatten": "^1.1.0",
     "arr-union": "^3.1.0",
     "array-flatten": "^2.1.2",
-    "array-uniq": "^1.0.3",
     "array-union": "^3.0.1",
+    "array-uniq": "^1.0.3",
     "array-unique": "^0.3.2",
-    "ansi-regex": "^5.0.1",
     "arrify": "^1.0.1",
     "asn1": "^0.2.6",
-    "assign-symbols": "^1.0.0",
     "assert-plus": "^1.0.0",
+    "assign-symbols": "^1.0.0",
     "async": "^2.6.3",
     "asynckit": "^0.4.0",
     "atob": "^2.1.2",
@@ -64,32 +66,32 @@
     "bcrypt-pbkdf": "^1.0.2",
     "big.js": "^5.2.2",
     "binary-extensions": "^2.2.0",
-    "body-parser": "^1.19.1",
     "bl": "^4.1.0",
+    "body-parser": "^1.19.1",
     "bonjour": "^3.5.0",
     "boolbase": "^1.0.0",
     "bootstrap": "^5.1.3",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
-    "browserslist": "^4.19.1",
     "brackets2dots": "^1.1.0",
+    "browserslist": "^4.19.1",
     "buffer": "^6.0.3",
     "buffer-from": "^1.1.2",
     "buffer-indexof": "^1.1.1",
     "builtins": "^1.0.3",
     "bytes": "^3.1.1",
     "cacache": "^15.3.0",
-    "call-bind": "^1.0.2",
     "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
     "call-me-maybe": "^1.0.1",
     "callsites": "^3.1.0",
-    "caniuse-lite": "^1.0.30001291",
     "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001291",
     "canonical-path": "^1.0.0",
     "caseless": "^0.12.0",
     "chalk": "^2.4.2",
-    "charenc": "^0.0.2",
     "chardet": "^0.7.0",
+    "charenc": "^0.0.2",
     "chokidar": "^3.5.2",
     "chownr": "^2.0.0",
     "chrome-trace-event": "^1.0.3",
@@ -119,20 +121,20 @@
     "compression": "^1.7.4",
     "concat-map": "^0.0.1",
     "concat-stream": "^2.0.0",
-    "connect-history-api-fallback": "^1.6.0",
     "connect": "^3.7.0",
+    "connect-history-api-fallback": "^1.6.0",
     "console-control-strings": "^1.1.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.4",
-    "convert-source-map": "^1.8.0",
     "content-type-parser": "^1.0.2",
+    "convert-source-map": "^1.8.0",
     "cookie": "^0.4.1",
     "cookie-signature": "^1.0.6",
     "copy-anything": "^2.0.3",
     "copy-descriptor": "^0.1.1",
     "copy-webpack-plugin": "^10.0.0",
-    "core-js-compat": "^3.20.0",
     "core-js": "^3.20.1",
+    "core-js-compat": "^3.20.0",
     "core-util-is": "^1.0.3",
     "cors": "^2.8.5",
     "cosmiconfig": "^7.0.1",
@@ -142,8 +144,8 @@
     "crypto-js": "^4.1.1",
     "css": "^3.0.0",
     "css-blank-pseudo": "^0.1.4",
-    "css-loader": "^6.5.1",
     "css-has-pseudo": "^0.10.0",
+    "css-loader": "^6.5.1",
     "css-prefers-color-scheme": "^3.1.1",
     "css-select": "^4.2.0",
     "css-what": "^5.1.0",
@@ -153,8 +155,8 @@
     "custom-event": "^1.0.1",
     "dashdash": "^1.14.1",
     "date-format": "^3.0.0",
-    "decode-uri-component": "^0.2.0",
     "debug": "^4.3.3",
+    "decode-uri-component": "^0.2.0",
     "deep-equal": "^1.1.1",
     "default-gateway": "^6.0.3",
     "defaults": "^1.0.3",
@@ -162,8 +164,8 @@
     "define-properties": "^1.1.3",
     "define-property": "^2.0.2",
     "del": "^6.0.0",
-    "delegates": "^1.0.0",
     "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
     "depd": "^1.1.2",
     "dependency-graph": "^0.11.0",
     "destroy": "^1.0.4",
@@ -241,8 +243,8 @@
     "formidable": "^1.2.6",
     "forwarded": "^0.2.0",
     "fragment-cache": "^0.2.1",
-    "fs-extra": "^8.1.0",
     "fresh": "^0.5.2",
+    "fs-extra": "^8.1.0",
     "fs-minipass": "^2.1.0",
     "fs-monkey": "^1.0.3",
     "fs-readdir-recursive": "^1.1.0",
@@ -258,18 +260,18 @@
     "getpass": "^0.1.7",
     "glob": "^7.2.0",
     "glob-parent": "^5.1.2",
-    "globalize": "^1.7.0",
     "glob-to-regexp": "^0.4.1",
+    "globalize": "^1.7.0",
     "globals": "^11.12.0",
     "globby": "^12.0.2",
     "graceful-fs": "^4.2.8",
     "handle-thing": "^2.0.1",
-    "har-validator": "^5.1.5",
     "har-schema": "^2.0.0",
+    "har-validator": "^5.1.5",
     "has": "^1.0.3",
     "has-ansi": "^2.0.0",
-    "has-symbols": "^1.0.2",
     "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.2",
     "has-tostringtag": "^1.0.0",
     "has-unicode": "^2.0.1",
     "has-value": "^1.0.0",
@@ -295,18 +297,18 @@
     "iconv-lite": "^0.4.24",
     "icss-utils": "^5.1.0",
     "ieee754": "^1.2.1",
-    "ignore-walk": "^4.0.1",
     "ignore": "^5.2.0",
-    "immutable": "^4.0.0",
+    "ignore-walk": "^4.0.1",
     "image-size": "^0.5.5",
+    "immutable": "^4.0.0",
     "import-fresh": "^3.3.0",
     "imurmurhash": "^0.1.4",
     "indent-string": "^4.0.0",
     "indexes-of": "^1.0.1",
     "infer-owner": "^1.0.4",
     "inflight": "^1.0.6",
-    "ini": "^2.0.0",
     "inherits": "^2.0.4",
+    "ini": "^2.0.0",
     "inquirer": "^8.2.0",
     "invert-kv": "^3.0.1",
     "ip": "^1.1.5",
@@ -314,8 +316,8 @@
     "is-accessor-descriptor": "^1.0.0",
     "is-arguments": "^1.1.1",
     "is-arrayish": "^0.2.1",
-    "is-buffer": "^1.1.6",
     "is-binary-path": "^2.1.0",
+    "is-buffer": "^1.1.6",
     "is-core-module": "^2.8.0",
     "is-data-descriptor": "^1.0.0",
     "is-date-object": "^1.0.5",
@@ -323,8 +325,8 @@
     "is-docker": "^2.2.1",
     "is-extendable": "^0.1.1",
     "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.3",
     "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
     "is-interactive": "^1.0.0",
     "is-lambda": "^1.0.1",
     "is-number": "^7.0.0",
@@ -343,22 +345,22 @@
     "isbinaryfile": "^4.0.8",
     "isexe": "^2.0.0",
     "isobject": "^3.0.1",
-    "istanbul-lib-coverage": "^3.2.0",
     "isstream": "^0.1.2",
+    "istanbul-lib-coverage": "^3.2.0",
     "istanbul-lib-instrument": "^5.1.0",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-lib-source-maps": "^4.0.1",
     "istanbul-reports": "^3.1.1",
     "jasmine-core": "^3.10.1",
     "jest-worker": "^27.4.5",
-    "js-tokens": "^4.0.0",
     "jquery": "^3.6.0",
+    "js-tokens": "^4.0.0",
     "js-yaml": "^3.14.1",
     "jsbn": "^0.1.1",
+    "jsesc": "^2.5.2",
     "json-parse-better-errors": "^1.0.2",
     "json-parse-even-better-errors": "^2.3.1",
     "json-schema": "^0.4.0",
-    "jsesc": "^2.5.2",
     "json-schema-traverse": "^1.0.0",
     "json-stringify-safe": "^5.0.1",
     "json5": "^2.2.0",
@@ -373,19 +375,19 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-source-map-support": "^1.4.0",
     "kind-of": "^6.0.3",
-    "lcid": "^3.1.1",
     "klona": "^2.0.5",
+    "lcid": "^3.1.1",
     "less": "^4.1.2",
-    "license-webpack-plugin": "^4.0.0",
     "less-loader": "^10.2.0",
+    "license-webpack-plugin": "^4.0.0",
     "lines-and-columns": "^1.2.4",
     "loader-runner": "^4.2.0",
     "loader-utils": "^3.2.0",
     "locate-path": "^5.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "log4js": "^6.3.0",
     "log-symbols": "^4.1.0",
+    "log4js": "^6.3.0",
     "lru-cache": "^6.0.0",
     "magic-string": "^0.25.7",
     "make-array": "^1.0.5",
@@ -421,8 +423,8 @@
     "minizlib": "^2.1.2",
     "mixin-deep": "^1.3.2",
     "mkdirp": "^1.0.4",
-    "multicast-dns": "^6.2.3",
     "ms": "^2.1.2",
+    "multicast-dns": "^6.2.3",
     "multicast-dns-service-types": "^1.1.0",
     "mute-stream": "^0.0.8",
     "nanoid": "^3.1.30",
@@ -457,14 +459,14 @@
     "object-is": "^1.1.5",
     "object-keys": "^1.1.1",
     "object-visit": "^1.0.1",
-    "object.pick": "^1.3.0",
     "object.assign": "^4.1.2",
+    "object.pick": "^1.3.0",
     "obuf": "^1.1.2",
     "on-finished": "^2.3.0",
     "on-headers": "^1.0.2",
     "once": "^1.4.0",
-    "open": "^8.4.0",
     "onetime": "^5.1.2",
+    "open": "^8.4.0",
     "ora": "^5.4.1",
     "os-locale": "^5.0.0",
     "os-tmpdir": "^1.0.2",
@@ -531,13 +533,13 @@
     "postcss-modules-scope": "^3.0.0",
     "postcss-modules-values": "^4.0.0",
     "postcss-nesting": "^7.0.1",
-    "postcss-page-break": "^2.0.0",
     "postcss-overflow-shorthand": "^2.0.0",
+    "postcss-page-break": "^2.0.0",
     "postcss-place": "^4.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-pseudo-class-any-link": "^6.0.0",
-    "postcss-selector-matches": "^4.0.0",
     "postcss-replace-overflow-wrap": "^3.0.0",
+    "postcss-selector-matches": "^4.0.0",
     "postcss-selector-not": "^4.0.1",
     "postcss-selector-parser": "^6.0.7",
     "postcss-value-parser": "^4.2.0",
@@ -561,9 +563,9 @@
     "raw-body": "^2.4.2",
     "read-cache": "^1.0.0",
     "read-package-json-fast": "^2.0.3",
+    "readable-stream": "^3.6.0",
     "readdirp": "^3.6.0",
     "reflect-metadata": "^0.1.13",
-    "readable-stream": "^3.6.0",
     "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^9.0.0",
     "regenerator-runtime": "^0.13.9",
@@ -582,16 +584,16 @@
     "requires-port": "^1.0.0",
     "resolve": "^1.20.0",
     "resolve-from": "^5.0.0",
-    "resolve-url-loader": "^4.0.0",
     "resolve-url": "^0.2.1",
-    "ret": "^0.1.15",
+    "resolve-url-loader": "^4.0.0",
     "restore-cursor": "^3.1.0",
+    "ret": "^0.1.15",
     "retry": "^0.12.0",
     "reusify": "^1.0.4",
     "rfdc": "^1.3.0",
     "rimraf": "^3.0.2",
-    "run-parallel": "^1.2.0",
     "run-async": "^2.4.1",
+    "run-parallel": "^1.2.0",
     "rxjs": "^7.4.0",
     "safe-buffer": "^5.1.2",
     "safe-regex": "^1.1.0",
@@ -604,8 +606,8 @@
     "selectn": "^1.1.2",
     "selfsigned": "^1.10.11",
     "semver": "^7.3.5",
-    "serialize-javascript": "^6.0.0",
     "send": "^0.17.2",
+    "serialize-javascript": "^6.0.0",
     "serve-index": "^1.9.1",
     "serve-static": "^1.14.2",
     "set-blocking": "^2.0.0",
@@ -627,8 +629,8 @@
     "sockjs": "^0.3.24",
     "socks": "^2.6.1",
     "socks-proxy-agent": "^6.1.1",
-    "source-map-js": "^1.0.1",
     "source-map": "^0.7.3",
+    "source-map-js": "^1.0.1",
     "source-map-loader": "^3.0.0",
     "source-map-resolve": "^0.6.0",
     "source-map-support": "^0.5.21",
@@ -639,17 +641,17 @@
     "split-string": "^1.0.1",
     "sprintf-js": "^1.0.3",
     "sshpk": "^1.16.1",
-    "stable": "^0.1.8",
     "ssri": "^8.0.1",
-    "statuses": "^1.5.0",
+    "stable": "^0.1.8",
     "static-extend": "^0.1.2",
+    "statuses": "^1.5.0",
     "stream": "^0.0.2",
     "streamroller": "^2.2.4",
     "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
-    "strip-final-newline": "^2.0.0",
     "strip-bom": "^3.0.0",
+    "strip-final-newline": "^2.0.0",
     "strong-globalize": "^6.0.5",
     "strong-soap": "^3.3.1",
     "stylus": "^0.55.0",
@@ -662,8 +664,8 @@
     "terser-webpack-plugin": "^5.3.0",
     "test-exclude": "^6.0.0",
     "text-table": "^0.2.0",
-    "thunky": "^1.1.0",
     "through": "^2.3.8",
+    "thunky": "^1.1.0",
     "tmp": "^0.0.33",
     "to-fast-properties": "^2.0.0",
     "to-object-path": "^0.3.0",
@@ -698,8 +700,8 @@
     "urix": "^0.1.0",
     "url": "^0.11.0",
     "use": "^3.1.1",
-    "utils-merge": "^1.0.1",
     "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
     "uuid": "^8.3.2",
     "validate-npm-package-name": "^3.0.0",
     "vary": "^1.1.2",
@@ -708,8 +710,8 @@
     "watchpack": "^2.3.1",
     "wbuf": "^1.7.3",
     "wcwidth": "^1.0.1",
-    "webpack-dev-middleware": "^5.2.2",
     "webpack": "^5.65.0",
+    "webpack-dev-middleware": "^5.2.2",
     "webpack-dev-server": "^4.6.0",
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.2",
@@ -733,11 +735,19 @@
     "yargs-parser": "^21.0.0",
     "zone.js": "^0.11.4"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^13.2.0",
+    "@angular/core": "^13.2.0",
+    "@angular/material": "^13.2.0",
+    "@angular/platform-browser": "^13.2.0",
+    "@angular/platform-browser-dynamic": "^13.2.0",
+    "@angular/router": "^13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0"
+  }
 }
